--- a/less/main.less
+++ b/less/main.less
@@ -1,15 +1,10 @@
 body {
-	padding-top: 77px;
 	background-color: #232323;
 	color: #fff;
 	font-family: SFUIRegular;
-
-	// @media (max-width: 788px) {
-	// 	padding-top: 60px;
-	// }
 }
 
-* {
+* {	
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -33,10 +28,12 @@ form * {
 	outline: none;
 }
 
-.clearfix {
-	content: '';
-	display: block;
-	clear: both;
+.main-wrapper {
+	margin-top: 60px;
+
+	@media (min-width: 788px) {
+		margin-top: 77px;
+	}
 }
 
 .hidden {
@@ -52,10 +49,10 @@ form * {
 	width: 100%;
 	height: 100%;
 	background: url('../img/preloader.gif') center center no-repeat;
-	background-size: 600px;
+	background-size: 100% auto;
 	background-color: #0b0b12;
 
-	// @media (max-width: 788px) {
-	// 	background-size: 100% auto;
-	// }
+	@media (min-width: 788px) {
+		background-size: 600px;
+	}
 }
