--- a/less/modal-contact.less
+++ b/less/modal-contact.less
@@ -1,20 +1,19 @@
-.modal-enter {
+.modal-contact {
+	display: flex;
+	flex-direction: row-reverse;
 	position: fixed;
 	z-index: 101;
 	top: -1000px;
 	left: 50%;
-	display: flex;
-	flex-direction: row-reverse;
-	flex-wrap: wrap;
-	width: 735px;
-	padding: 20px;
-	transform: translate(-50%, -50%);
+	width: 800px;
+	padding: 30px;
 	background-image: url('../img/reg-bg.jpg');
 	background-size: cover;
+	transform: translate(-50%, -50%);
 	transition: 0.3s;
 
 	@media @tablet {
-		width: 550px;
+		width: 600px;
 	}
 
 	@media @mobile {
@@ -23,13 +22,15 @@
 
 	&__character-wrapper {
 		position: absolute;
-		left: -42px;
-		top: -18px;
-		width: 380px;
+		z-index: -1;
+		left: -48px;
+		top: -17px;
+		width: 390px;
 
 		@media @tablet {
-			top: 150px;
-			width: 200px;
+			width: 220px;
+			top: 220px;
+			left: -10px;
 		}
 
 		@media @mobile {
@@ -85,41 +86,28 @@
 			}
 		}
 	}
-
-	&__wrapper {
-		text-align: center;
-	}
-
-	&__forgot-pass {
-		display: -inline-block;
-		margin: 0 auto;
-		color: #d9d9d9;
-		text-decoration: underline;
-		transition: 0.1s;
-
-		&:hover {
-			color: #fff;
-		}
-	}
 }
 
-.enter-form {
-	width: 350px;
+.contact-form {
+	width: 460px;
 
-	@media @mobile {
+	@media @tablet {
+		width: 350px;
+	}
+
+	@media @tablet {
 		width: 100%;
 	}
 
 	&__header {
 		margin-top: 20px;
 		margin-bottom: 40px;
+		text-transform: uppercase;
 	}
 
 	&__email,
-	&__password {
+	&__text-field {
 		width: 100%;
-		height: 45px;
-		padding: 0 13px;
 		margin-bottom: 20px;
 		border: none;
 		font-family: SFUIRegular;
@@ -133,10 +121,20 @@
 		}
 	}
 
+	&__email {
+		height: 45px;
+		padding: 0 13px;
+	}
+
+	&__text-field {
+		height: 120px;
+		padding: 17px 13px;
+		resize: none;
+	}
+
 	&__button {
 		width: 100%;
 		padding: 20px;
-		margin-bottom: 30px;
 		border: none;
 		background-color: #ed383f;
 		font-family: SFUIMedium;
