--- a/less/modal-registration.less
+++ b/less/modal-registration.less
@@ -4,7 +4,6 @@
 	position: fixed;
 	z-index: 101;
 	top: -1000px;
-	// top: 50%;
 	left: 50%;
 	width: 945px;
 	padding: 20px;
@@ -94,6 +93,10 @@
 	width: 560px;
 	margin-top: 20px;
 
+	@media @mobile {
+		width: 100%;
+	}
+
 	&__header {
 		width: 100%;
 		margin-bottom: 40px;
@@ -104,7 +107,7 @@
 	input {
 		font-family: SFUIRegular;
 		font-size: 14px;
-		color: #999999;
+		color: #000;
 
 		&::placeholder {
 			font-family: SFUIRegular;
@@ -131,6 +134,7 @@
 		@media @mobile {
 			width: 100%;
 			height: 30px;
+			margin-bottom: 15px;
 		}
 	}
 
@@ -150,6 +154,7 @@
 		@media @mobile {
 			width: 100%;
 			height: 30px;
+			margin-bottom: 15px;
 			padding-top: 0;
 			padding-bottom: 0;
 		}
@@ -163,6 +168,10 @@
 		font-size: 14px;
 		line-height: 20px;
 		cursor: pointer;
+
+		@media @mobile {
+			margin-bottom: 20px;
+		}
 	}
 
 	&__checkbox {
@@ -220,5 +229,4 @@
 	height: 100%;
 	background-color: #000;
 	opacity: 0;
-	transition: 0.3s;
 }
