--- a/less/slider.less
+++ b/less/slider.less
@@ -98,4 +98,133 @@
 			padding: 8px 10px;
 		}
 	}
+
+	&__form-wrapper {
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+		position: absolute;
+		top: 0;
+		right: ~"calc(50% - 190px)";
+		height: 100%;
+		width: ~"calc(50% + 190px)";
+		padding: 50px;
+		background-color: rgba(0, 0, 0, 0.5);
+
+		@media @tablet {
+			display: none;
+		}
+	}
+}
+
+.slide-bonus {
+	width: 395px;
+	margin-top: -30px;
+	text-align: center;
+
+	> span {
+		display: block;
+	}
+
+	&__first-line {
+		font-family: SFUIHeavy;
+		font-size: 175px;
+	}
+
+	&__second-line {
+		font-family: SFUIBold;
+		margin-bottom: 10px;
+		font-size: 38px;
+		text-transform: uppercase;
+	}
+
+	&__third-line {
+		font-size: 21px;
+	}
+}
+
+.slide-reg {
+	width: 330px;
+
+	&__email,
+	&__nickname,
+	&__select,
+	&__password {
+		width: 100%;
+		margin-bottom: 18px;
+		border: none;
+		padding: 12px 13px;
+		font-family: SFUIRegular;
+		color: #000;
+
+		&::placeholder {
+			font-family: SFUIRegular;
+			color: #999999;
+		}
+	}
+
+	&__select {
+		font-family: SFUIRegular;
+		color: #999999;
+		cursor: pointer;
+	}
+
+	&__label-checkbox {
+		display: inline-block;
+		position: relative;
+		padding-left: 30px;
+		margin-bottom: 20px;
+		font-size: 12px;
+		line-height: 20px;
+		cursor: pointer;
+
+		@media @mobile {
+			margin-bottom: 20px;
+		}
+	}
+
+	&__checkbox {
+		position: absolute;
+		left: 0;
+		opacity: 0;
+		cursor: pointer;
+	}
+
+	&__checkbox:not(checked) + label::before {
+		content: '';
+		position: absolute;
+		left: 0;
+		width: 18px;
+		height: 18px;
+		border: 1px solid #e3e3e3;
+		background-color: #fff;
+	}
+
+	&__checkbox:checked + label::after {
+		content: '';
+		position: absolute;
+		top: 5px;
+		left: 3px;
+		width: 13px;
+		height: 5px;
+		border-top: 1px solid #f38084;
+		border-right: 1px solid #f38084;
+		transform: rotate(135deg);
+	}
+
+	&__button {
+		width: 100%;
+		padding: 18px 20px;
+		border: none;
+		background-color: #ed383f;
+		font-family: SFUIMedium;
+		font-size: 14px;
+		color: #fff;
+		cursor: pointer;
+		transition: 0.1s;
+
+		&:hover {
+			background-color: #dd363c;
+		}
+	}
 }
