--- a/less/modal-registration.less
+++ b/less/modal-registration.less
@@ -10,10 +10,10 @@
 	background-image: url('../img/reg-bg.jpg');
 	background-size: cover;
 	transform: translate(-50%, -50%);
-	transition: 0.3s;
+	transition: 0.6s;
 
 	@media @tablet {
-		width: 750px;
+		width: 700px;
 	}
 
 	@media @mobile {
@@ -93,6 +93,10 @@
 	width: 560px;
 	margin-top: 20px;
 
+	@media @tablet {
+		width: 500px;
+	}
+
 	@media @mobile {
 		width: 100%;
 	}
@@ -124,7 +128,7 @@
 	&__password,
 	&__password-confirm,
 	&__code {
-		width: 270px;
+		width: 240px;
 		height: 45px;
 		margin-bottom: 20px;
 		padding: 0 13px;
@@ -141,7 +145,7 @@
 	&__currency {
 		display: block;
 		position: relative;
-		width: 270px;
+		width: 240px;
 		height: 45px;
 		margin-bottom: 20px;
 		padding-left: 13px;
