--- a/less/deposites.less
+++ b/less/deposites.less
@@ -25,6 +25,11 @@
 		margin-bottom: 40px;
 		font-size: 40px;
 		line-height: 60px;
+
+		@media @mobile {
+			font-size: 32px;
+			line-height: 40px;
+		}
 	}
 
 	&__button {
