--- a/less/style.less
+++ b/less/style.less
@@ -22,3 +22,5 @@
 @import "modal-enter.less";
 @import "modal-contact.less";
 @import "error.less";
+@import "registration-form-mini.less";
+@import "registration.less";
