--- a/less/header.less
+++ b/less/header.less
@@ -231,7 +231,7 @@
 
 		@media @mobile {
 			left: -10px;
-			width: 150px;
+			width: ~"calc(100% + 20px)";
 		}
 	}
 
@@ -253,13 +253,13 @@
 
 		@media @tablet {
 			display: block;
-			width: 150px;
+			width: 100%;
 			margin-right: 0;
 			text-align: center;
 
 			a {
 				display: block;
-				width: 150px;
+				width: 100%;
 				padding: 20px 0;
 			}
 		}
@@ -298,10 +298,12 @@
 
 	&__dropdown {
 		position: absolute;
-		z-index: 11;
-		top: 49px;
+		z-index: -1;
+		top: 0;
+		width: 150px;
 		list-style: none;
-		transition: 0.1s;
+		opacity: 0;
+		transition: 0.3s;
 
 		p {
 			width: 200px;
@@ -312,12 +314,14 @@
 		}
 
 		@media @tablet {
-			top: 0;
-			left: 149px;
+			top: -50px;
+			left: 148px;
+			width: 100%;
 		}
 
 		@media @mobile {
-			top: -1px;
+			position: absolute;
+			top: 59px;
 		}
 	}
 
@@ -325,7 +329,7 @@
 
 		a {
 			display: block;
-			width: 150px;
+			width: 100%;
 			padding: 20px;
 			background-color: #313131;
 
@@ -333,6 +337,26 @@
 				background-color: #414141;
 			}
 		}
+	}
+
+	&__item--active {
+		transition: 0.6s;
+
+		.main-nav__dropdown {
+			z-index: 100;
+			top: 49px;
+			opacity: 1;
+
+			@media @tablet {
+				top: 0;
+			}
+
+			@media @mobile {
+				position: relative;
+				top: 0;
+			}
+		}
+
 	}
 
 	&__item--arrow {
@@ -348,15 +372,16 @@
 			border-right: 1px solid #bf3136;
 			border-bottom: 1px solid #bf3136;
 			transform: rotate(45deg);
+			transition: 0.3s;
 		}
 
 		@media @tablet {
 
 			&::after {
 				right: 20px;
-				bottom: 23px;
+				top: 23px;
+				bottom: auto;
 				left: auto;
-				transform: rotate(-45deg);
 			}
 		}
 	}
