html for bonus, and other

--- a/less/header.less
+++ b/less/header.less
@@ -300,7 +300,7 @@
 		position: absolute;
 		z-index: -1;
 		top: 0;
-		width: 150px;
+		width: auto;
 		list-style: none;
 		opacity: 0;
 		transition: 0.3s;
