--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ form * {
   position: absolute;
   z-index: -1;
   top: 0;
-  width: 150px;
+  width: auto;
   list-style: none;
   opacity: 0;
   transition: 0.3s;
